kubernetes/gke_5_googlessl/part2_reserved_ip/hello_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s-gce-ssl2
spec:
  # GCE Ingress has to be 'NodePort' or 'LoadBalancer'
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-k8s-gce-ssl2
